[tool.poetry]
name = "easy-api"
version = "0.1.0"
description = ""
authors = ["Paulo Aguiar <aguiarlapaulo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.1"
uvicorn = "^0.30.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
